Fixed flow of post header on narrow display

--- a/docs/style.css
+++ b/docs/style.css
@@ -211,17 +211,17 @@ main
 .post-header
 {
 	width: 100%;
-	height: 10rem;
 	display: flex;
-	flex-direction: column;
 	flex-wrap: wrap;
 	padding-top: 2rem;
-	align-content: space-between;
+	padding-bottom: 2rem;
+	justify-content: space-between;
 }
 
-.post-header .tags
+.post-header h2
 {
-	text-align: right;
+	padding-right: 1rem;
+	margin-bottom: 0;
 }
 
 .post
